--- a/1.23/manifests/grafana-image-renderer.yaml
+++ b/1.23/manifests/grafana-image-renderer.yaml
@@ -36,7 +36,7 @@ spec:
         - name: GRAFANA_IMAGE_RENDERER_SERVICE_PORT_HTTP
           value: "8081"
         - name: GRAFANA_MAGE_RENDERER_SERVICE_HOST
-          value: "localohost"
+          value: "localhost"
         - name: GRAFANA_IMAGE_RENDERER_PORT_8081_TCP_PORT
           value: "8081"
         - name: GRAFANA_IMAGE_RENDERER_PORT_8081_TCP
