--- a/1.23/manifests/grafana-deployment.yaml
+++ b/1.23/manifests/grafana-deployment.yaml
@@ -33,7 +33,7 @@ spec:
           value: http://image-render:8081/render
         - name: GF_RENDERING_CALLBACK_URL
           value: http://grafana:3000/
-        image: grafana/grafana:8.5.3
+        image: grafana/grafana:latest
         name: grafana
         ports:
         - containerPort: 3000
@@ -53,6 +53,9 @@ spec:
         - mountPath: /var/lib/grafana
           name: grafana-storage
           readOnly: false
+        - mountPath: /etc/grafana
+          name: grafana-config
+          readOnly: false        
         - mountPath: /etc/grafana/provisioning/datasources
           name: grafana-datasources
           readOnly: false
@@ -139,7 +142,8 @@ spec:
         runAsUser: 65534
       serviceAccountName: grafana
       volumes:
-      - emptyDir: {}
+      - persistentVolumeClaim:
+          claimName: grafana-storage
         name: grafana-storage
       - name: grafana-datasources
         secret:
